--- a/css/styles.css
+++ b/css/styles.css
@@ -2,5 +2,11 @@ body{
     text-align: center;
 }
 .home{
-    background-image: url("assets/backgrounds/h_img.jpg");
+    background: url("../assets/backgrounds/h_img.jpg");
+    
+    background-color: #cccccc;
+    height: auto;
+    width: auto;
+    padding: 20px;
+    
 }
