--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,8 @@ body{
     padding: 20px;
     
 }
+.services{
+    background: url("../assets/backgrounds/s_image.jpg");
+    color: white;
+    padding: 10px;
+}
