--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,12 @@ body{
     color: white;
     padding: 10px;
 }
+.design{
+    display: none;
+}
+.dev{
+    display: none;
+}
+.product{
+    display: none;
+}
