add css styling to gallary

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,9 @@ body{
 .product{
     display: none;
 }
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 15px;
+}
