--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,28 @@
-body{
-    text-align: center;
-    padding: 10px;
+@import url('https://fonts.googleapis.com/css?family=Copse|Delius+Swash+Caps|Gabriela|Unkempt&display=swap');
+html{
+  scroll-behavior: smooth;
 }
-.home{
-    background-image: url("../assets/backgrounds/h_img.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    color: white;
-    
-    
+.landing{
+  background-image: url('../images/backgrounds/h_img.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  text-align: center;
+  padding-top:17%; 
+  font-family: 'Gabriela', serif;
+  /* padding-bottom:5%; */
 }
-.services{
-    background: url("../assets/backgrounds/s_image.jpg");
-    color: white;
-    padding: 10px;
+.landing h1{
+  padding: 2px;
+  margin: 5px;
 }
-.design{
-    display: none;
+.landing p{
+  padding: 2px;
 }
-.dev{
-    display: none;
-}
-.product{
-    display: none;
-}
-.gallery{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 15px;
-}
-.centered{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: none;
-}
-.gallery.p{
-    border: 3px;
-    border-style: solid;
-    border-color: white;
-    color: white;
-}
-.contact{
-    background-image: url("../assets/backgrounds/c_image.jpg");
-    color: white;
-    padding: 10px;
+#logo{
+  margin-top: 12px;
+  margin-bottom: 24px;
+  width: 70px;
+  height: 70px;;
 }
