--- a/css/styles.css
+++ b/css/styles.css
@@ -56,4 +56,22 @@ html{
   #about{
     font-family: 'Gabriela', serif;
   }
-  
+  .services{
+    text-align: center;
+    background-image: url("../images/backgrounds/s_image.jpg");
+    color: white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'Copse', serif;
+    font-size: 18px;
+  }
+  .services h2{
+    font-family: 'Gabriela', serif;
+    
+  }
+  #servicesoverlay{
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }  
