--- a/css/styles.css
+++ b/css/styles.css
@@ -74,4 +74,13 @@ html{
     background-color: rgba(0,0,0,0.4);
     padding-top: 10%;
     padding-bottom: 10%;
+  }
+  .what-we-do{
+    font-family: 'Quattrocento', serif;
+    text-align: center;
+    padding-top: 40px;
+    font-family: 'Gabriela', serif;
+  }
+  .what-we-do .headings{
+    padding-bottom: 38px;
   }  
