--- a/css/styles.css
+++ b/css/styles.css
@@ -83,4 +83,20 @@ html{
   }
   .what-we-do .headings{
     padding-bottom: 38px;
+  }
+  #portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-left:18%;
+    margin-right: 16%; 
+  }
+  .col-md-3 img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .portfolio h2{
+    text-align: center;
+    padding-top:40px;
+    font-family: 'Gabriela', serif;
   }  
