--- a/css/styles.css
+++ b/css/styles.css
@@ -99,4 +99,49 @@ html{
     text-align: center;
     padding-top:40px;
     font-family: 'Gabriela', serif;
+  }
+  .contact{
+    background-image: url('../images/backgrounds/c_image.jpg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    /* text-align: center; */
+  }
+  .title{
+    padding: 6px;
+  }
+  .contact h2{
+    text-align: center;
+    margin-top: 30px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    font-family: 'Gabriela', serif;
+  }
+  input[type=text],input[type=email],#comment{
+    background: transparent;
+    color: white;
+    font-size: 20px;
+    font-family: 'Copse', serif;
+  }
+  
+  .form-control::-webkit-input-placeholder { 
+    color: white; 
+  }
+  #MERGE1{
+    width: 30%;
+    margin-left: 18%;
+    margin-right: 30px;
+  }
+  #MERGE0{
+    width: 30%;
+  }
+  #comment{
+    margin-left: 20%;
+    width: 60%;
+  }
+  button{
+    margin-left: 20%;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
   }  
