--- a/css/styles.css
+++ b/css/styles.css
@@ -144,4 +144,37 @@ html{
     margin-left: 20%;
     padding-bottom: 30px;
     margin-bottom: 20px;
-  }  
+  }
+  footer{
+    text-align: center;
+    padding-top: 30px;
+    font-family: 'Delius Swash Caps', cursive;
+  }
+  footer p{
+    margin-top: 10px;
+  }
+  #product, #development, #design{
+    display: none;
+    font-family: 'Copse', serif;
+    font-size: 16px;
+  }
+  #product .title, #development .title, #design .title{
+    font-size: 20px;
+    font-weight: 600;
+  }
+  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+    display: none;
+    color: black;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(255, 255, 255, 0.456);
+    position:absolute;
+    top: 20px;
+    left: 35px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 50%;
+    font-family: 'Delius Swash Caps', cursive;
+  }
+    
