--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ html{
   }
   .services{
     text-align: center;
-    background-image: url("../images/backgrounds/s_image.jpg");
+    background-image: url("../assets/backgrounds/s_image.jpg");
     color: white;
     background-position: center;
     background-size: cover;
@@ -101,7 +101,7 @@ html{
     font-family: 'Gabriela', serif;
   }
   .contact{
-    background-image: url('../images/backgrounds/c_image.jpg');
+    background-image: url('../assets/backgrounds/c_image.jpg');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -177,4 +177,102 @@ html{
     padding-top: 50%;
     font-family: 'Delius Swash Caps', cursive;
   }
-    
+  @media only screen and (max-width: 755px){
+    #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+      width: 100%;
+      height: 100%;
+      top: 20px;
+      left: 16px;
+      padding-top: 20%;
+      /* font-size: 16px; */
+    }
+    .col-md-3 img{
+      width:100%px;
+      margin: 20px;
+    }
+    #portfolio{
+      margin-left:8%;
+      margin-right: 16%; 
+    }
+    button{
+      margin-left: 2%;
+      padding-bottom: 30px;
+      margin-bottom: 20px;
+      /* margin-left: 10px; */
+  
+      /* margin-right: -20%; */
+    }
+  }
+  @media only screen and (max-width: 425px){
+    #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+      width: 100%;
+      height: 100%;
+      top: 20px;
+      left: 16px;
+      padding-top: 20%;
+      font-size: 20px;
+    }
+    .col-md-3 img{
+      width:100%px;
+      margin: 20px;
+    }
+    #portfolio{
+      margin-left:8%;
+      margin-right: 16%; 
+    }
+    button{
+      padding-bottom: 30px;
+      margin-bottom: 20px;
+    }
+    #MERGE0{
+      width: 84%;
+      margin-left: 4%;
+      padding-bottom: 10px;
+    }
+    #MERGE1{
+      width: 100%;
+      margin-left: 4%;
+      margin-bottom: 20px;
+    }
+    #comment{
+      margin-left: 4%;
+      width: 84%;
+    }
+  }
+  @media only screen and (min-width: 825px){
+    #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+      width: 100%;
+      height: 100%;
+      top: 20px;
+      left: 20px;
+      padding-top:30%; 
+    }
+    .col-md-3 img{
+      width: 400px;
+      margin: 20px;
+    }
+    #portfolio{
+      margin-left:10%;
+      margin-right: 10%; 
+    }
+  }
+  @media only screen and (min-width: 625px){
+    #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+      width: 100%;
+      height: 100%;
+      top: 20px;
+      left: 20px;
+      padding-top:20%; 
+      font-size: 26px;
+    }
+    .col-md-3 img{
+      width: 400px;
+      margin: 20px;
+    }
+    #portfolio{
+      margin-left:6%;
+      margin-right: 10%; 
+    }
+  }
+  
+            
